submitting assignment for week 2

--- a/week02/week02_assignment_1.ipynb
+++ b/week02/week02_assignment_1.ipynb
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "answers = {}\n",
-    "answers[\"1.1\"] = \"X\""
+    "answers[\"1.1\"] = \"A\""
    ]
   },
   {
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"1.2\"] = \"X\""
+    "answers[\"1.2\"] = \"C\""
    ]
   },
   {
@@ -133,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"1.3\"] = \"X\""
+    "answers[\"1.3\"] = \"D\""
    ]
   },
   {
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"2.1\"] = \"X\""
+    "answers[\"2.1\"] = \"B\""
    ]
   },
   {
@@ -188,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"2.2\"] = \"X\""
+    "answers[\"2.2\"] = \"A\""
    ]
   },
   {
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"2.3\"] = \"X\""
+    "answers[\"2.3\"] = \"D\""
    ]
   },
   {
@@ -242,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"3.1\"] = \"X\""
+    "answers[\"3.1\"] = \"B\""
    ]
   },
   {
@@ -268,7 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"3.2\"] = \"X\""
+    "answers[\"3.2\"] = \"B\""
    ]
   },
   {
@@ -294,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"3.3\"] = \"X\""
+    "answers[\"3.3\"] = \"A\""
    ]
   },
   {
@@ -326,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"4.1\"] = \"X\""
+    "answers[\"4.1\"] = \"A\""
    ]
   },
   {
@@ -352,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"4.2\"] = \"X\""
+    "answers[\"4.2\"] = \"B\""
    ]
   },
   {
@@ -383,17 +383,17 @@
      "output_type": "stream",
      "text": [
       "   Q#               Yours  Correct?\n",
-      "  1.1                   X        NO\n",
-      "  1.2                   X        NO\n",
-      "  1.3                   X        NO\n",
-      "  2.1                   X        NO\n",
-      "  2.2                   X        NO\n",
-      "  2.3                   X        NO\n",
-      "  3.1                   X        NO\n",
-      "  3.2                   X        NO\n",
-      "  3.3                   X        NO\n",
-      "  4.1                   X        NO\n",
-      "  4.2                   X        NO\n"
+      "  1.1                   A        OK\n",
+      "  1.2                   C        OK\n",
+      "  1.3                   D        OK\n",
+      "  2.1                   B        OK\n",
+      "  2.2                   A        OK\n",
+      "  2.3                   D        OK\n",
+      "  3.1                   B        OK\n",
+      "  3.2                   B        OK\n",
+      "  3.3                   A        OK\n",
+      "  4.1                   A        OK\n",
+      "  4.2                   B        OK\n"
      ]
     }
    ],
