submitting the assignment for week 2

--- a/week02/week02_assignment_2.ipynb
+++ b/week02/week02_assignment_2.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -101,16 +101,16 @@
    },
    "outputs": [],
    "source": [
-    "def bmi(weight_kg, height_m):\n",
+    "def bm_index(wt_in_kilos, ht_in_mts):\n",
     "    \n",
     "    # 1. Change the names of parameter1 and parameter2 to be something more meaningful\n",
     "    # 2. Change the name of the return variable below\n",
     "    \n",
     "    ### BEGIN SOLUTION\n",
-    "    bmi = weight_kg / (height_m**2)\n",
+    "    bm_index= wt_in_kilos / (ht_in_mts**2)\n",
     "    ### END SOLUTION\n",
     "    \n",
-    "    return bmi"
+    "    return bm_index"
    ]
   },
   {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -143,17 +143,30 @@
    },
    "outputs": [],
    "source": [
-    "assert round(bmi(90.7, 1.82), 2) == 27.38\n",
-    "assert round(bmi(91, 1.80), 2) == 28.09\n",
-    "assert round(bmi(70, 1.70), 2) == 24.22"
+    "assert round(bm_index(90.7, 1.82), 2) == 27.38\n",
+    "assert round(bm_index(91, 1.80), 2) == 28.09\n",
+    "assert round(bm_index(70, 1.70), 2) == 24.22"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.086419753086417"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bm_index (91 , 1.80)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,36 +181,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def weight(bmi, height_m):\n",
+    "def wt_in_kilos(bm_index, ht_in_mts):\n",
     "        \n",
     "    ### BEGIN SOLUTION\n",
-    "    w = -1\n",
+    "    wt_in_kilos =bm_index*(ht_in_mts**2)\n",
     "    ### END SOLUTION\n",
     "    \n",
-    "    return w"
+    "    return wt_in_kilos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert round(weight(27.38, 1.82),2) == 90.69\n",
-    "assert round(weight(28.09, 1.80),2) == 91.01\n",
-    "assert round(weight(24.22, 1.70),2) == 70.00"
+    "assert round(wt_in_kilos(27.38, 1.82),2) == 90.69\n",
+    "assert round(wt_in_kilos(28.09, 1.80),2) == 91.01\n",
+    "assert round(wt_in_kilos(24.22, 1.70),2) == 70.00"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "91.0116"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wt_in_kilos(28.09, 1.80)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -215,37 +241,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from math import sqrt\n",
-    "def height(bmi, weight_kg):\n",
+    "def ht_in_mts(bm_index, wt_in_kilos):\n",
     "    \n",
     "    ### BEGIN SOLUTION\n",
-    "    h = -1\n",
+    "    ht_in_mts = sqrt (wt_in_kilos/bm_index)\n",
     "    ### END SOLUTION\n",
     "    \n",
-    "    return h"
+    "    return ht_in_mts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert round(height(27.38, 90.69),2) == 1.82\n",
-    "assert round(height(28.09, 91.01),2) == 1.80\n",
-    "assert round(height(24.22, 70.00),2) == 1.70"
+    "assert round(ht_in_mts(27.38, 90.69),2) == 1.82\n",
+    "assert round(ht_in_mts(28.09, 91.01),2) == 1.80\n",
+    "assert round(ht_in_mts(24.22, 70.00),2) == 1.70"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.7000510022951147"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ht_in_mts (24.22,70.00)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,15 +304,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bmi_us(weight_lb, height_ft, height_in):\n",
+    "def bm_index_us(wt_in_kilos_lb, ht_in_mts_ft, ht_in_mts_in):\n",
     "    \n",
     "    ### BEGIN SOLUTION\n",
-    "    weight_kg = weight_lb * 0.54\n",
-    "    height_m = ((height_ft * 12) + height_in) * 2.54 / 100\n",
-    "    bmi = weight_kg / (height_m**2)\n",
+    "    wt_in_kilos= wt_in_kilos_lb * 0.454545\n",
+    "    ht_in_mts = ((ht_in_mts_ft * 12) + ht_in_mts_in) * 2.54 / 100\n",
+    "    bm_index_us = wt_in_kilos / (ht_in_mts**2)\n",
     "    ### END SOLUTION\n",
     "    \n",
-    "    return bmi"
+    "    return bm_index_us"
    ]
   },
   {
@@ -282,17 +321,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert round(bmi_us(250,6,4),2) == 36.23\n",
-    "assert round(bmi_us(120,5,0),2) == 27.90\n",
-    "assert round(bmi_us(130,5,10),2) == 22.21"
+    "assert round(bm_index_us(250,6,4),2) == 30.49\n",
+    "assert round(bm_index_us(120,5,0),2) == 23.48\n",
+    "assert round(bm_index_us(130,5,10),2) == 18.69"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23.48487196974394"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bm_index_us(120,5,0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -324,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -336,7 +388,7 @@
    },
    "outputs": [],
    "source": [
-    "def lose_weight(weight, height, kg_per_week, target_bmi):\n",
+    "def lose_weight(wt_in_kilos, ht_in_cm, kg_per_week, target_bm_index):\n",
     "    \n",
     "    # Note that the variables you need area already named for you:\n",
     "    # height is the height in cm\n",
@@ -345,7 +397,8 @@
     "    # target_bmi is the intended target bmi\n",
     "    \n",
     "    ### BEGIN SOLUTION\n",
-    "    days = -1\n",
+    "    target_wt_in_kilos= (target_bm_index)*((ht_in_cm/100)**2)\n",
+    "    days = (((wt_in_kilos)-(target_wt_in_kilos))/(kg_per_week))*7\n",
     "    ### END SOLUTION\n",
     "    \n",
     "    return days"
@@ -360,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -381,11 +434,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59.92000000000008"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "lose_weight(90.7, 182, 0.75, 24.9)"
+    "lose_weight(70, 170, 0.75, 22)"
    ]
   },
   {
@@ -413,9 +477,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.48315805517451\n"
+     ]
+    }
+   ],
    "source": [
     "# THIS IS AN EXAMPLE, PUT YOUR RESPONSE IN THE NEXT CELL DOWN\n",
     "\n",
@@ -428,12 +500,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50.24\n"
+     ]
+    }
+   ],
    "source": [
     "# PUT YOUR RESPONSE HERE\n",
+    "radius =4\n",
+    "area_circle= (3.14*radius**2)\n",
     "\n",
+    "print(area_circle)\n",
     "\n",
     "\n"
    ]
