submitting homework assignments for week 3

--- a/week03/week03_assignment_2.ipynb
+++ b/week03/week03_assignment_2.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -238,6 +238,9 @@
    "outputs": [],
    "source": [
     "def LACE(length_of_stay, acute_flag, charlson, ed_visits):\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    \"\"\"(int, bool, int, int) -> int\n",
     "    This function uses the logic from https://www.hindawi.com/journals/bmri/2015/169870/tab1/\n",
     "    to compute the LACE score for this patient.\n",
@@ -250,17 +253,68 @@
     "    \n",
     "    \"\"\"\n",
     " \n",
-    "    ### BEGIN SOLUTION\n",
+    "    ### BEGIN SOLUTION \n",
     "    \n",
+    "   #lenght of stay\n",
+    "    if length_of_stay < 1:\n",
+    "        length_of_stay = 0\n",
+    "    elif length_of_stay ==1:\n",
+    "        length_of_stay = 1\n",
+    "    elif length_of_stay ==2:\n",
+    "        length_of_stay = 2\n",
+    "    elif length_of_stay ==3:\n",
+    "        length_of_stay = 3\n",
+    "    elif length_of_stay in range(4,6):\n",
+    "        length_of_stay = 4\n",
+    "    elif length_of_stay in range(7,13):\n",
+    "        length_of_stay = 5\n",
+    "    else:\n",
+    "        length_of_stay = 7\n",
+    "    #for Acute admission\n",
+    "    if acute_flag == True:\n",
+    "         acute_flag = 3\n",
+    "    else:\n",
+    "        acute_flag = 0\n",
+    "    #for charlson comorbidity\n",
+    "    if charlson  ==0:\n",
+    "        charlson = 0\n",
+    "    elif charlson  ==1:\n",
+    "        charlson = 1 \n",
+    "    elif charlson  ==2:\n",
+    "        charlson = 2\n",
+    "    elif charlson  ==3:\n",
+    "        charlson = 3\n",
+    "    else:\n",
+    "        charlson = 5\n",
+    " #for emergency visits\n",
+    "    if ed_visits  ==0:\n",
+    "        ed_visits = 0\n",
+    "    elif ed_visits  ==1:\n",
+    "        ed_visits = 1\n",
+    "    elif ed_visits  ==2:\n",
+    "        ed_visits = 2\n",
+    "    elif ed_visits  ==3:\n",
+    "        ed_visits = 3\n",
+    "    else:\n",
+    "        ed_visits = 4\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    score= length_of_stay + acute_flag + charlson + ed_visits\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "\n",
+    "        \n",
     "    ### END SOLUTION\n",
     "    \n",
     "    \n",
-    "    return score"
+    "    return score  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -279,10 +333,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LACE(4, False, 1, 0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -307,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -330,6 +397,61 @@
     "    \n",
     "    ### BEGIN SOLUTION\n",
     "    \n",
+    "    \n",
+    "def assign_care_coordinator(diagnosis_cd, ed_visits, length_of_stay, acute_flag, charlson):\n",
+    "   \n",
+    "   \n",
+    "    if ed_visits  ==0:\n",
+    "        ed_visits = 0\n",
+    "    elif ed_visits  ==1:\n",
+    "        ed_visits = 1\n",
+    "    elif ed_visits  ==2:\n",
+    "        ed_visits = 2\n",
+    "    elif ed_visits  ==3:\n",
+    "        ed_visits = 3\n",
+    "    else:\n",
+    "        ed_visits = 4\n",
+    "  \n",
+    "    \n",
+    "    if length_of_stay < 1:\n",
+    "        length_of_stay = 0\n",
+    "    elif length_of_stay ==1:\n",
+    "        length_of_stay = 1\n",
+    "    elif length_of_stay ==2:\n",
+    "        length_of_stay = 2\n",
+    "    elif length_of_stay ==3:\n",
+    "        length_of_stay = 3\n",
+    "    elif length_of_stay in range(4,6):\n",
+    "        length_of_stay = 4\n",
+    "    elif length_of_stay in range(7,13):\n",
+    "        length_of_stay = 5\n",
+    "    else:\n",
+    "        length_of_stay = 7\n",
+    "        \n",
+    "\n",
+    "    if acute_flag == True:\n",
+    "        acute_flag = 3\n",
+    "    else:\n",
+    "         acute_flag = 0\n",
+    "        \n",
+    "        \n",
+    "    if charlson  ==0:\n",
+    "        charlson = 0\n",
+    "    elif charlson  ==1:\n",
+    "         charlson = 1 \n",
+    "    elif charlson  ==2:\n",
+    "         charlson = 2\n",
+    "    elif charlson  ==3:\n",
+    "        charlson = 3\n",
+    "    else:\n",
+    "        charlson = 5\n",
+    "        \n",
+    "    score= length_of_stay + acute_flag + charlson + ed_visits\n",
+    "    \n",
+    "    if diagnosis_cd == 'CHF' or diagnosis_cd == 'COPD'or score> 10:\n",
+    "        assignment= True\n",
+    "    else:\n",
+    "         assignment= False\n",
     "    ### END SOLUTION\n",
     "        \n",
     "    return assignment\n",
@@ -339,17 +461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "nbgrader": {
-     "grade": true,
-     "grade_id": "weight-tests",
-     "locked": true,
-     "points": 5,
-     "schema_version": 1,
-     "solution": false
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "assert assign_care_coordinator('None', 0, 4, False, 1) == False\n",
@@ -361,14 +474,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assign_care_coordinator('COPD', 0, 4, False, 1) == True"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-12-1e24515ce412>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-1e24515ce412>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    See: https://www.mdcalc.com/quick-covid-19-severity-index-qcsi#evidence\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "### 14.5 qCSI COVID-19 Severity Index\n",
     "\n",
@@ -385,11 +522,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def qcsi(respiratory_rate, pulse_ox, o2_flow):\n",
+    "def qcsi(respi_rate, pulse_ox, o2_flow):\n",
     "    \"\"\"(int, int, int) -> str\n",
     "    * respiratory_rate is an integer value\n",
     "    * pulse_ox is an integer value (e.g. 30 means 30%)\n",
@@ -397,7 +534,53 @@
     "    \"\"\"\n",
     "    \n",
     "    ### BEGIN SOLUTION\n",
-    "        \n",
+    "    #for respiratory rate\n",
+    "    \n",
+    "    if respi_rate <=0:\n",
+    "        return \"invalid respiratory rate\"\n",
+    "    elif respi_rate <= 22:\n",
+    "        respi_rate = 0\n",
+    "    elif respi_rate in range (23,28):\n",
+    "        respi_rate = 1\n",
+    "    else:\n",
+    "        respi_rate= 2\n",
+    "    \n",
+    "    #for pulse oximetry\n",
+    "   \n",
+    "    if pulse_ox <= 0:\n",
+    "        return \"invalid pulse ox\"\n",
+    "    elif pulse_ox > 92:\n",
+    "        pulse_ox = 0\n",
+    "    elif pulse_ox > 100:\n",
+    "        return \"invalid pulse ox\"\n",
+    "    elif pulse_ox in range (89,92):\n",
+    "        pulse_ox = 2\n",
+    "    else:\n",
+    "        pulse_ox = 5\n",
+    "    \n",
+    "    #for o2 flow\n",
+    "    \n",
+    "    if o2_flow <= 0:\n",
+    "        return \"invalid O2 flow rate\"\n",
+    "    elif o2_flow <= 2:\n",
+    "         o2_flow = 0\n",
+    "    elif o2_flow in range (3,4):\n",
+    "        o2_flow = 4\n",
+    "    elif o2_flow in range (5,6):\n",
+    "        o2_flow = 5\n",
+    "    \n",
+    "    \n",
+    "    qcsi= respi_rate + pulse_ox + o2_flow\n",
+    "    \n",
+    "    if qcsi <= 3:\n",
+    "        risk = 'low'\n",
+    "    elif qcsi in range (4,6):\n",
+    "        risk = 'low-intermediate'\n",
+    "    elif qcsi in range (7,9):\n",
+    "        risk = 'high-intermediate'\n",
+    "    else:\n",
+    "        risk ='high'\n",
+    "    \n",
     "    ### END SOLUTION\n",
     "    \n",
     "    return risk"
@@ -405,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +607,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "qcsi(29, 88, 1)"
+   ]
   },
   {
    "cell_type": "markdown",
