submitting homework assignment for week 4

--- a/week04/week04_assignment_2.ipynb
+++ b/week04/week04_assignment_2.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "['Paul Boal', 'Donald Duck', 'Kermit Frog']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,6 +222,9 @@
     "\n",
     "    ### BEGIN SOLUTION\n",
     "    output = []\n",
+    "    for l_name, f_list in families.items():\n",
+    "        for name in f_list:\n",
+    "            output.append([l_name,name])\n",
     "    ### END SOLUTION\n",
     "            \n",
     "    return output"
@@ -229,9 +232,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Duck', 'Hewey'],\n",
+       " ['Duck', 'Dewey'],\n",
+       " ['Duck', 'Louie'],\n",
+       " ['Mouse', 'Mickey'],\n",
+       " ['Mouse', 'Minney']]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dict_to_list({'Duck': ['Hewey','Dewey','Louie'], \n",
     "              'Mouse': ['Mickey','Minney']})"
@@ -256,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -285,7 +303,13 @@
     "    # cells below.\n",
     "\n",
     "    ### BEGIN SOLUTION\n",
-    "    # Put your solution here\n",
+    "    for name in names:\n",
+    "        f_name= name[0]\n",
+    "        member = name[1]\n",
+    "        \n",
+    "        if f_name not in families.keys():\n",
+    "            families[f_name] = []\n",
+    "        families[f_name].append(member)\n",
     "    ### END SOLUTION\n",
     "\n",
     "    return families\n"
@@ -293,16 +317,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Boal': ['Paul', 'Ada', 'Teddy'],\n",
+       " 'Duck': ['Donald', 'Daisy'],\n",
+       " 'Westhus': ['Eric']}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list_to_dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -335,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -352,7 +389,13 @@
     "    conclusions = []\n",
     "    \n",
     "    ### BEGIN SOLUTION\n",
-    "    # Put your solution here\n",
+    "    for member, diagnosis, los in patients:\n",
+    "        if (avg_los[diagnosis] < los):\n",
+    "            conclusions.append([member, 'too long'])\n",
+    "        elif (avg_los[diagnosis] > los):\n",
+    "            conclusions.append([member, 'too short'])\n",
+    "        else:\n",
+    "            conclusions.append([member, 'just right'])\n",
     "    ### END SOLUTION\n",
     "    \n",
     "    return conclusions"
@@ -360,9 +403,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Boal', 'too short'],\n",
+       " ['Boal', 'too long'],\n",
+       " ['Jones', 'just right'],\n",
+       " ['Ashbury', 'too short']]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "avg_los = {\n",
     "    \"Hemolytic jaundice and perinatal jaundice\" : 2,\n",
@@ -389,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "nbgrader": {
      "grade": true,
